@@ -1,22 +1,22 @@
 Lucene Build Instructions
 
 Basic steps:
-  0) Install JDK 1.5 (or greater), Ant 1.7.x (not 1.6.x, not 1.8.x)
+  0) Install JDK 1.6 (or greater), Ant 1.7.1+ (not 1.6.x, not 1.8.x)
   1) Download Lucene from Apache and unpack it
   2) Connect to the top-level of your Lucene installation
   3) Install JavaCC (optional)
   4) Run ant
 
-Step 0) Set up your development environment (JDK 1.5 or greater,
-Ant 1.7.x)
+Step 0) Set up your development environment (JDK 1.6 or greater,
+Ant 1.7.1+)
 
 We'll assume that you know how to get and set up the JDK - if you
 don't, then we suggest starting at http://java.sun.com and learning
 more about Java, before returning to this README. Lucene runs with
-JDK 1.5 and later.
+JDK 1.6 and later.
 
 Like many Open Source java projects, Lucene uses Apache Ant for build
-control.  Specifically, you MUST use Ant version 1.7.x
+control.  Specifically, you MUST use Ant version 1.7.1+
 
 Ant is "kind of like make without make's wrinkles".  Ant is
 implemented in java and uses XML-based configuration files.  You can
